update handler error code and update swagger
