# docs/swagger.yaml
@@ -508,12 +508,6 @@ paths:
         name: id
         required: true
         type: integer
-      - description: required
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/entities.AnswareResponse'
       produces:
       - application/json
       responses:
@@ -613,12 +607,6 @@ paths:
         name: id
         required: true
         type: integer
-      - description: required
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/entities.AssignmentResponse'
       produces:
       - application/json
       responses:
@@ -686,12 +674,6 @@ paths:
         name: id
         required: true
         type: integer
-      - description: required
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/entities.QuestionResponse'
       produces:
       - application/json
       responses:
