# interface/answare/handler.go
@@ -152,7 +152,6 @@ func (h *AnswareHandler) UpdateAnsware(c echo.Context) error {
 // @Produce json
 // @Router /student/answare/{id} [delete]
 // @param id path int true "id"
-// @param data body entities.AnswareResponse true "required"
 // @Success 200 {object} entities.Answare
 // @Failure 400 {object} entities.Answare
 // @Failure 500 {object} entities.Answare
